# VLCAutoCaptionPlugin

./: CMakeLists.txt
.github/workflows/: build.yml
modules/whisper_subs/: whisper_subs.cpp
